--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="bot">
-        <input type="button" value="Talk to mentalChat" id="talk_button">
+        <input type="button" value="Talk " id="talk_button">
     </div>
     
 </body>
